# sidabari4loop

./: .gitignore  CLAUDE.md  LICENSE  README.md  SIDABARI4LOOP_CONTRACT.md  SIDABARI4LOOP_SPEC.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
scripts/: transcript_to_md.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: append-event.js  gate.js
src-tauri/src/: audit_log.rs  config.rs  hook_installer.rs  hooks_bus.rs  lib.rs  main.rs  pty.rs  supervisor.rs  window_clamp.rs
src/components/layout/: MainLayout.tsx  ResizeHandle.tsx
src/components/modals/: BootstrapModal.tsx  GateModal.tsx  SettingsModal.tsx
src/components/monitor/: ActivityIndicator.tsx  HookBridge.tsx  SupervisorController.tsx
src/components/panels/: ConsolePanel.tsx  MainClaudePanel.tsx  ProgressPanel.tsx
src/components/terminal/: PtyTerminal.tsx  Terminal.tsx
src/components/ui/: button.tsx  tabs.tsx
src/hooks/: useBuildProgress.ts  usePanelFocus.ts
src/lib/: buildOrder.test.ts  buildOrder.ts  claudeHooks.ts  config.ts  hooks.ts  pty.ts  supervisor.test.ts  supervisor.ts
src/store/: useAppStore.ts
templates/: bootstrap-prompt.md
