[package]
name = "sidabari4loop"
version = "0.1.0"
description = "Sidabari4Loop: Claude Code 실행 + Hook 이벤트 처리 도구."
authors = ["Claude Code (Anthropic) <noreply@anthropic.com>", "cx8537 <cx8537@naver.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sidabari4loop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 로컬 PTY (Claude Code 실행). Windows ConPTY / Unix pty 추상화.
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
# Claude Code 훅 IPC. events.jsonl tail + req-/resp- 파일 페어 watch.
notify = "6"
# 훅 이벤트 영구 적재용 SQLite. bundled로 시스템 sqlite 의존성 회피.
rusqlite = { version = "0.31", features = ["bundled"] }

